; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_s3c2410_wdt.c_s3c2410wdt_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_s3c2410_wdt.c_s3c2410wdt_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { i32 }

@open_lock = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4
@nowayout = common dso_local global i64 0, align 8
@THIS_MODULE = common dso_local global i32 0, align 4
@expect_close = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @s3c2410wdt_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @s3c2410wdt_open(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.file*, align 8
  store %struct.inode* %0, %struct.inode** %4, align 8
  store %struct.file* %1, %struct.file** %5, align 8
  %6 = call i64 @test_and_set_bit(i32 0, i32* @open_lock)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i32, i32* @EBUSY, align 4
  %10 = sub nsw i32 0, %9
  store i32 %10, i32* %3, align 4
  br label %22

11:                                               ; preds = %2
  %12 = load i64, i64* @nowayout, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %11
  %15 = load i32, i32* @THIS_MODULE, align 4
  %16 = call i32 @__module_get(i32 %15)
  br label %17

17:                                               ; preds = %14, %11
  store i64 0, i64* @expect_close, align 8
  %18 = call i32 (...) @s3c2410wdt_start()
  %19 = load %struct.inode*, %struct.inode** %4, align 8
  %20 = load %struct.file*, %struct.file** %5, align 8
  %21 = call i32 @nonseekable_open(%struct.inode* %19, %struct.file* %20)
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %17, %8
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i64 @test_and_set_bit(i32, i32*) #1

declare dso_local i32 @__module_get(i32) #1

declare dso_local i32 @s3c2410wdt_start(...) #1

declare dso_local i32 @nonseekable_open(%struct.inode*, %struct.file*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
